@@ -36,7 +36,38 @@
           gridWriteTecplotCellGeom(grid,nodes,NULL,NULL); \
    }}; }
 
-#define STATUS DUMP_TEC PRINT_STATUS
+#define STATUS leading_edge_spacing(grid, LeadingEdgeScale); DUMP_TEC PRINT_STATUS 
+
+void leading_edge_spacing(Grid *grid, double LeadingEdgeScale ) {
+  int node;
+  double xyz[3];
+  double centerX;
+  double radius, theta;
+  double rSpace, tSpace, ySpace;
+  double normal[3], tangent[3], third[3];
+  for (node=0;node<gridMaxNode(grid);node++) {
+    if (grid==gridNodeXYZ(grid,node,xyz)) {
+      centerX = 0.03;
+      radius = sqrt((xyz[0]-centerX)*(xyz[0]-centerX)+xyz[2]*xyz[2]);
+      theta = atan2(xyz[2],xyz[0]-centerX);
+      rSpace = 0.2*pow(MIN(4.0*radius,1.0),LeadingEdgeScale);
+      tSpace = 0.05+0.1*radius;
+      ySpace = 0.25;
+      normal[0]=normal[1]=normal[2]=0;
+      tangent[0]=tangent[1]=tangent[2]=0;
+      third[0]=third[1]=third[2]=0;
+      normal[0]=cos(theta);
+      normal[2]=sin(theta);
+      tangent[0]=-sin(theta);
+      tangent[2]=cos(theta);
+      third[1]=1.0;
+      gridSetMapWithSpacingVectors(grid, node,
+				   normal, tangent, third, 
+				   rSpace, tSpace, ySpace);
+    }
+  }    
+}
+
 
 #ifdef PROE_MAIN
 int GridEx_Main( int argc, char *argv[] )
@@ -172,37 +203,8 @@ int main( int argc, char *argv[] )
 
   printf("Spacing reset.\n");
   gridResetSpacing(grid);
-
-  if (TRUE) {
-    int node;
-    double xyz[3];
-    double centerX;
-    double radius, theta;
-    double rSpace, tSpace, ySpace;
-    double normal[3], tangent[3], third[3];
-    printf("spacing set to Leading Edge.\n");
-    for (node=0;node<gridMaxNode(grid);node++) {
-      if (grid==gridNodeXYZ(grid,node,xyz)) {
-	centerX = 0.03;
-	radius = sqrt((xyz[0]-centerX)*(xyz[0]-centerX)+xyz[2]*xyz[2]);
-	theta = atan2(xyz[2],xyz[0]-centerX);
-	rSpace = 0.2*pow(MIN(4.0*radius,1.0),LeadingEdgeScale);
-	tSpace = 0.05+0.1*radius;
-	ySpace = 0.25;
-	normal[0]=normal[1]=normal[2]=0;
-	tangent[0]=tangent[1]=tangent[2]=0;
-	third[0]=third[1]=third[2]=0;
-	normal[0]=cos(theta);
-	normal[2]=sin(theta);
-	tangent[0]=-sin(theta);
-	tangent[2]=cos(theta);
-	third[1]=1.0;
-	gridSetMapWithSpacingVectors(grid, node,
-				     normal, tangent, third, 
-				     rSpace, tSpace, ySpace);
-      }
-    }    
-  }
+  printf("spacing set to Leading Edge.\n");
+  leading_edge_spacing(grid,LeadingEdgeScale);
   
   for (i=0;i<1;i++){
     printf("edge swapping grid...\n");gridSwap(grid,-1.0);
