@@ -1,3 +1,8 @@
+2005-09-25 20:04 Mike Park  <mike.park@nasa.gov>
+
+	* src/unit_main.c (leading_edge_spacing) extracted the spacing
+	function to apply it often (every STATUS).
+
 2005-09-15 10:20 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridmpi.c (gridParallelAdapt) refactored the path (currently
